--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,13 +29,14 @@ jobs:
 
     - name: Run tests and record output
       run: mvn test | tee test-results.txt
+      working-directory: ${{ github.workspace }}
 
     - name: Archive test results
       if: always()
       uses: actions/upload-artifact@v3
       with:
         name: test-results
-        path: test-results.txt
+        path: ${{ github.workspace }}/test-results.txt
 
     - name: Notify Slack on success
       if: success()
@@ -45,8 +46,8 @@ jobs:
     - name: Notify Slack on failure
       if: failure()
       run: |
-        if [ -f test-results.txt ]; then
-          TEST_RESULTS=$(cat test-results.txt)
+        if [ -f ${{ github.workspace }}/test-results.txt ]; then
+          TEST_RESULTS=$(cat ${{ github.workspace }}/test-results.txt)
           curl -X POST -H 'Content-type: application/json' --data "{\"text\":\"Tests failed:\\n${TEST_RESULTS}\"}" ${{ secrets.SLACK_WEBHOOK_URL }}
         else
           curl -X POST -H 'Content-type: application/json' --data '{"text":"Tests failed: No test result file found."}' ${{ secrets.SLACK_WEBHOOK_URL }}
