--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v3 
+      uses: actions/setup-java@v4  # Обновлено до последней версии, поддерживающей Node.js 20
       with:
         java-version: '17'
         distribution: 'temurin'
@@ -32,7 +32,7 @@ jobs:
 
     - name: Archive test results
       if: always()
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4  # Обновлено до последней версии, поддерживающей Node.js 20
       with:
         name: test-results
         path: test-results.txt
@@ -40,14 +40,14 @@ jobs:
     - name: Notify Slack on success
       if: success()
       run: |
-        curl -X POST -H 'Content-type: application/json' --data '{"text":"All tests passed successfully!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+        curl -X POST -H 'Content-type: application/json' --data '{"text":"Все ок!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
 
     - name: Notify Slack on failure
       if: failure()
       run: |
         if [ -f test-results.txt ]; then
           TEST_RESULTS=$(cat test-results.txt)
-          curl -X POST -H 'Content-type: application/json' --data "{\"text\":\"Tests failed:\\n${TEST_RESULTS}\"}" ${{ secrets.SLACK_WEBHOOK_URL }}
+          curl -X POST -H 'Content-type: application/json' --data "{\"text\":\"Тесты не пройдены:\\n${TEST_RESULTS}\"}" ${{ secrets.SLACK_WEBHOOK_URL }}
         else
-          curl -X POST -H 'Content-type: application.json' --data '{"text":"Tests failed: No test result file found."}' ${{ secrets.SLACK_WEBHOOK_URL }}
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Тесты не пройдены: файл с результатами тестов не найден."}' ${{ secrets.SLACK_WEBHOOK_URL }}
         fi
