--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v4  # Обновлено до последней версии, поддерживающей Node.js 20
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
@@ -28,14 +28,14 @@ jobs:
       run: mvn exec:java -Dexec.mainClass="org.example.GenerateTestFileMini"
 
     - name: Run tests and record output
-      run: mvn test | tee test-results.txt
+      run: mvn test | tee $GITHUB_WORKSPACE/test-results.txt
 
     - name: Archive test results
       if: always()
-      uses: actions/upload-artifact@v4  # Обновлено до последней версии, поддерживающей Node.js 20
+      uses: actions/upload-artifact@v4
       with:
         name: test-results
-        path: test-results.txt
+        path: $GITHUB_WORKSPACE/test-results.txt
 
     - name: Notify Slack on success
       if: success()
@@ -45,8 +45,8 @@ jobs:
     - name: Notify Slack on failure
       if: failure()
       run: |
-        if [ -f test-results.txt ]; then
-          TEST_RESULTS=$(cat test-results.txt)
+        if [ -f $GITHUB_WORKSPACE/test-results.txt ]; then
+          TEST_RESULTS=$(cat $GITHUB_WORKSPACE/test-results.txt)
           curl -X POST -H 'Content-type: application/json' --data "{\"text\":\"Тесты не пройдены:\\n${TEST_RESULTS}\"}" ${{ secrets.SLACK_WEBHOOK_URL }}
         else
           curl -X POST -H 'Content-type: application/json' --data '{"text":"Тесты не пройдены: файл с результатами тестов не найден."}' ${{ secrets.SLACK_WEBHOOK_URL }}
