--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v4  
       with:
         java-version: '17'
         distribution: 'temurin'
@@ -27,12 +27,22 @@ jobs:
     - name: Generate test files
       run: mvn exec:java -Dexec.mainClass="org.example.GenerateTestFileMini"
 
-    - name: Run tests and capture output
-      id: run-tests
+    - name: Run tests and record output
       run: |
-        mvn test 2>&1 | tee mvn-output.log
-        TEST_RESULTS=$(cat mvn-output.log)
-        echo "::set-output name=test_results::$TEST_RESULTS"
+        pwd  # Вывод текущей директории для отладки
+        ls -alh  # Вывод списка файлов для отладки
+        mvn test | tee test-results.txt
+      shell: bash
+
+    - name: List workspace files for debugging
+      run: ls -alh
+
+    - name: Archive test results
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-results
+        path: test-results.txt
 
     - name: Notify Slack on success
       if: success()
@@ -42,5 +52,9 @@ jobs:
     - name: Notify Slack on failure
       if: failure()
       run: |
-        FAILED_TESTS=$(grep -A 10 "Tests run:" mvn-output.log)
-        curl -X POST -H 'Content-type: application/json' --data "{\"text\":\"Тесты не пройдены:\\n${FAILED_TESTS}\"}" ${{ secrets.SLACK_WEBHOOK_URL }}
+        if [ -f test-results.txt ]; then
+          TEST_RESULTS=$(cat test-results.txt)
+          curl -X POST -H 'Content-type: application/json' --data "{\"text\":\"Тесты не пройдены:\\n${TEST_RESULTS}\"}" ${{ secrets.SLACK_WEBHOOK_URL }}
+        else
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Тесты не пройдены: файл с результатами тестов не найден."}' ${{ secrets.SLACK_WEBHOOK_URL }}
+        fi
