--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,7 +25,8 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Generate test files
-      run: mvn exec:java -Dexec.mainClass="org.example.GenerateTestFileMini"
+      run: |
+        mvn exec:java -Dexec.mainClass="org.example.GenerateTestFileMini" || exit 1
 
     - name: Run tests and capture output
       id: run-tests
@@ -33,6 +34,11 @@ jobs:
         mvn test 2>&1 | tee mvn-output.log
         TEST_RESULTS=$(cat mvn-output.log)
         echo "::set-output name=test_results::$TEST_RESULTS"
+
+    - name: List workspace files for debugging
+      run: |
+        echo "Files in workspace after tests:"
+        ls -alh
 
     - name: Notify Slack on success
       if: success()
@@ -42,5 +48,8 @@ jobs:
     - name: Notify Slack on failure
       if: failure()
       run: |
-        FAILED_TESTS=$(grep -A 10 "Tests run:" mvn-output.log)
-        curl -X POST -H 'Content-type: application/json' --data "{\"text\":\"Тесты не пройдены:\\n${FAILED_TESTS}\"}" ${{ secrets.SLACK_WEBHOOK_URL }}
+        if [ -f mvn-output.log ]; then
+          FAILED_TESTS=$(grep -A 10 "Tests run:" mvn-output.log)
+          curl -X POST -H 'Content-type: application/json' --data "{\"text\":\"Тесты не пройдены:\\n${FAILED_TESTS}\"}" ${{ secrets.SLACK_WEBHOOK_URL }}
+        else
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Тесты не пройдены: файл с результатами тестов не найден."}' ${{ secrets.SLACK_WEBHOOK_URL }}
