--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,8 +25,7 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Generate test files
-      run: |
-        mvn exec:java -Dexec.mainClass="org.example.GenerateTestFileMini" || exit 1
+      run: mvn exec:java -Dexec.mainClass="org.example.GenerateTestFileMini" -e -X || exit 1
 
     - name: Run tests and capture output
       id: run-tests
